--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -26,15 +26,8 @@ jobs:
           check.sh $(pwd) $(pwd)
 
       - name: Show coding style errors
-        if: ${{ job.status == 'failure' }}
         run: |
-          cat result.xml | python3 /error_anotation.py
-
-      - name: Fail if coding style errors
-        if: ${{ job.status == 'failure' }}
-        run: |
-          echo "Coding style errors detected. Please fix them."
-          exit 1
+          cat coding-style-reports.log
 
   check_program_compilation:
     needs: check_coding_style
