--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -19,7 +19,7 @@ jobs:
       image: ghcr.io/epitech/coding-style-checker:latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Run coding style checker
         run: |
@@ -41,6 +41,11 @@ jobs:
             has_errors=true
           done < coding-style-reports.log
 
+          if [ "$has_errors" = true ]; then
+            echo "Failing job due to coding style errors"
+            exit 1
+          fi
+
   check_program_compilation:
     needs: check_coding_style
     runs-on: ubuntu-latest
@@ -48,7 +53,7 @@ jobs:
       image: epitechcontent/epitest-docker
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Launch make
         run: make
@@ -73,7 +78,7 @@ jobs:
       image: epitechcontent/epitest-docker
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Launch tests
         run: make tests_run
@@ -84,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Push to mirror repository
         uses: pixta-dev/repository-mirroring-action@v1
