--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -87,6 +87,7 @@ jobs:
   push_to_mirror:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    needs: ${{ join(needs.*, '.') }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
