--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -35,9 +35,8 @@ jobs:
             line_number=$(echo "$line" | cut -d: -f2)
             error_code=$(echo "$line" | cut -d: -f3)
             error_level=$(echo "$error_code" | cut -d- -f1)
-            error_message="$error_level coding style error: $filepath#L$line_number<br>$error_code"
+            error_message="$error_level coding style error: $filepath#L$line_number%0A$error_code"
             echo "::error file=$filepath,line=$line_number::$error_message"
-            annotations="$annotations$error_message"$'\n\n'
             has_errors=true
           done < coding-style-reports.log
           if [ "$has_errors" = true ]; then
