--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -28,23 +28,7 @@ jobs:
       - name: Show coding style errors
         id: Annotations
         run: |
-          annotations=""
-          has_errors=false
-          while read -r line; do
-            filepath=$(echo "$line" | cut -d: -f1| cut -c3-)
-            line_number=$(echo "$line" | cut -d: -f2)
-            error_code=$(echo "$line" | cut -d: -f3)
-            error_level=$(echo "$error_code" | cut -d- -f1)
-            error_message="$error_level coding style error: $filepath#L${line_number//'\n'/'%0A'}%0A$error_code"
-            echo "::notice file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
-            echo ::error file=$filepath,line=$line_number::$error_level coding style error: $filepath#L${line_number}%0A$error_code
-            annotations="$annotations$error_message"
-            has_errors=true
-          done < coding-style-reports.log
-          if [ "$has_errors" = true ]; then
-            echo "Failing job due to coding style errors"
-            exit 1
-          fi
+          echo "::error file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
 
   check_program_compilation:
     needs: check_coding_style
