--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Push to mirror repository
         uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url:
+          destination_repository:
             ${{ env.MIRROR_URL }}
           ssh_private_key:
             ${{ secrets.GIT_SSH_PRIVATE_KEY }}
